--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "NODE_ENV=test nodemon ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/storage": "^1.7.0",
     "bcryptjs": "^2.4.3",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
@@ -16,7 +20,8 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.9",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "multer": "^1.3.1"
   },
   "main": "app.js",
   "devDependencies": {},
