--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "register-service-worker": "^1.5.2",
     "sweetalert": "^2.1.0",
     "vue": "^2.5.17",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.19"
   },
