--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "register-service-worker": "^1.5.2",
